Updated existing files